...
            .view(title: "DuckPlayer", { _ in
                DuckPlayerDebugSettingsView()
            }),
            .view(title: "WebView State Restoration", { _ in
                WebViewStateRestorationDebugView()
            }),
            .view(title: "History", { d in
                HistoryDebugRootView(tabManager: d.tabManager)
            }),
            .view(title: "Bookmarks", { _ in
                BookmarksDebugRootView()
            }),
            .view(title: "Remote Messaging", { dependencies in
...
